# restolink

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: database.rs  jwt.rs  mod.rs  secure.rs
src/services/user/: get.rs
