[package]
name = "restolink"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "*"
cryptojs_rust = "0.1.4"
base64 = "0.21"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres" ] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
